<resources>
    <string name="app_name">掌上娃娃机</string>
    <string name="login_please">欢迎使用，请先登录</string>
    <string name="phone_num">请输入您的手机号码</string>
    <string name="password">请输入您的6位密码</string>
    <string name="ensure">确认</string>
    <string name="go_register">去注册</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="third_party_login">第三方登录</string>
    <string name="sina">微博</string>
    <string name="weichat">微信</string>
    <string name="register_account">注册账号</string>
    <string name="register">注册</string>
    <string name="retrieve_pwd">找回密码</string>
    <string name="finish">完成</string>
    <string name="next_step">下一步</string>
    <string name="get_code">获取</string>
    <string name="verify_code">验证码</string>
    <string name="step_one">1.请使用手机验证身份</string>
    <string name="set_new_pwd_hint">2.设置一个新密码</string>
    <string name="set_new_pwd">设置新密码</string>
    <string name="ensure_new_pwd">确认新密码</string>
    <string name="input_phone_num_please">请输入手机号码</string>
    <string name="get_code_count">获取(%ds)</string>
    <string name="get_verify_code">获取</string>
    <string name="verifyCode">验证码</string>
    <string name="set_pwd">设置密码</string>
    <string name="ensure_pwd">确认密码</string>
    <string name="use_phonenum_register">请使用手机号码注册账号</string>
    <string name="phonenum_illegal">手机号码格式不正确</string>
    <string name="input_pwd">请输入密码</string>
    <string name="pwd_rule">密码长度为6，只能包含字母、数字</string>
    <string name="pwd_not_same">二次输入的密码不一致</string>
    <string name="input_verify_code">请输入验证码</string>
    <string name="register_succeed">注册成功</string>
    <string name="resetpwd_succeed">重置成功</string>
    <string name="login_succeed">登录成功</string>
    <string name="press_again_to_exit">再按一次退出！</string>
    <string name="message">消息</string>
    <string name="more">更多</string>
    <string name="user_center">个人中心</string>
    <string name="chat_message">聊天消息</string>
    <string name="catch_record">抓取记录</string>
    <string name="notice_message">通知消息</string>
    <string name="setting">设置</string>
    <string name="online_service">在线客服</string>
    <string name="feedback">意见反馈</string>
    <string name="about_app">关于我们</string>
    <string name="share_invitation_code">分享我的邀请码</string>
    <string name="unLogin">退出当前账号</string>
    <string name="submit">提交</string>
    <string name="email_num">邮箱号</string>
    <string name="submit_succeed">提交成功</string>
    <string name="feedback_hint">请输入您遇到的问题或建议...</string>
    <string name="input_email">请输入您的邮箱号</string>
    <string name="email_illegal">请输入正确的邮箱号</string>
    <string name="reciviced_feedback">您的宝贵意见我们已收到！</string>
    <string name="my_invite_awards">我的邀请奖励</string>
    <string name="my_coupon">我的优惠券</string>
    <string name="my_coin">我的娃娃币</string>
    <string name="recharge">充值</string>
    <string name="my_doll">我的娃娃</string>
    <string name="invite_awards">邀请奖励</string>
    <string name="record_detail">记录详情</string>
    <string name="report">申诉</string>
    <string name="confirm_address">确认发货地址</string>
    <string name="my_doll_detail">我的娃娃详情</string>
    <string name="logistics_info">物流信息</string>
    <string name="pay_succeed">支付成功</string>
    <string name="user_info">个人资料</string>
    <string name="header">头像</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="sendAddress">寄送地址</string>
    <string name="edit_nickname">修改昵称</string>
    <string name="save">保存</string>
    <string name="input_nickname">请输入你的昵称</string>
    <string name="modify_succeed">修改成功</string>
    <string name="update_header">更换头像</string>
    <string name="as_default">设为默认</string>
    <string name="edit">编辑</string>
    <string name="del">删除</string>
    <string name="del_succeed">删除成功</string>
    <string name="save_succeed">保存成功</string>
    <string name="ensure_del_address_hint">是否确认删除该地址</string>
    <string name="rec_user_name">收货人：</string>
    <string name="contacts">联系方式：</string>
    <string name="region">所在地区：</string>
    <string name="detail_address">详细地址：</string>
    <string name="create_new_address">+新建地址</string>
    <string name="select_recharge_value">请选择充值金额</string>
    <string name="back_home">返回首页</string>
    <string name="select_pay_type">选择支付方式</string>
    <string name="confirm">确认</string>
    <string name="share_my_invite_code">分享我的邀请码</string>
    <string name="hint_share_invite_code">每邀请一个好友，\n 双方均可获得是个游戏币；\n 邀请上限为10名，最高可得100游戏币。</string>
    <string name="hint_exchange_invite_code">填写好友给你的邀请码，\n 双方均可获得是个游戏币；\n 每个人只能有一次兑换邀请码的机会！</string>
    <string name="doll_detail_hint">* 收到包裹后请及时开箱检查是否存在问题，售后处理的事假为签收后七日之内。（售后处理时间内，请确保问题订单中娃娃、吊牌、外包装的完好）\n* 娃娃寄存时间为抓取成功之后的15天，15天后问申请发货系统将会自动为您将娃娃兑换成相应的娃娃币。\n* 请尽量选择二只及以上数量的娃娃【一起申请发货】可以免运费哦！\n* 如果您【单独申请】了二只娃娃分别发货，无论地址是否一致，都不享受免运费发货的哦\n*目前仅支持中国大陆地区范围内部邮寄</string>
    <string name="exchange_coin_hint">* 选择兑换娃娃币将失去这个娃娃，可获得80个娃娃币</string>
    <string name="exchange_coin">换娃娃币</string>
    <string name="invite_exchange">邀请码兑换</string>
    <string name="my_invite_code">我的邀请码</string>
    <string name="num">数量</string>
    <string name="watch_game_video">观看游戏视频</string>
    <string name="game_id">游戏编号</string>
    <string name="current_state">当前状态</string>
    <string name="can_exchange_coin">可换娃娃币</string>
    <string name="request_delivery">请求发货</string>
    <string name="check_logistics">查看物流</string>
    <string name="exchange_succeed">恭喜您换取成功！</string>
    <string name="go_check">去查看</string>
    <string name="can_report_when_hava_question">* 游戏过程中遇到任何问题请点击申诉按钮反馈</string>
    <string name="ensure_use_this_coupon">确定使用该优惠券吗？</string>
    <string name="exchange_coupon_succeed">兑换优惠券成功!</string>
    <string name="modify_address">修改地址</string>
    <string name="ensure_delivery">确认发货</string>
    <string name="ensure_delivery_hint">您确定要请求发货吗？</string>
    <string name="go_recharge">去充值</string>
    <string name="postage_not_enough_hint">您当前的娃娃币不足支付邮费\n请前往充值娃娃币</string>
    <string name="hisroty_consume_record">历史消费记录</string>
    <string name="hisroty_recharge_record">历史充值记录</string>
    <string name="weixin_circle">朋友圈</string>
    <string name="invite_succeed_hint">恭喜您邀请码兑换成功！</string>
</resources>
