<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:padding="10dp"
    android:scrollbars="none"
    tools:context="com.softgarden.catchdolls.ui.userCenter.myDolls.DollDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_radius_white_10dp"
            android:divider="@drawable/shape_line_ver"
            android:orientation="vertical"
            android:showDividers="middle">

            <include
                layout="@layout/item_my_dolls"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="0dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/GrayDarkText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/num" />

                <android.support.v7.widget.AppCompatTextView
                    style="@style/BlackText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="1" />

            </LinearLayout>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvWatchGameVideo"
                style="@style/GrayDarkText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@mipmap/gray_right_arrow"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:paddingVertical="10dp"
                android:text="@string/watch_game_video" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/GrayDarkText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/game_id" />

                <android.support.v7.widget.AppCompatTextView
                    style="@style/BlackText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/GrayDarkText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/current_state" />

                <android.support.v7.widget.AppCompatTextView
                    style="@style/BlackText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/GrayDarkText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/can_exchange_coin" />

                <android.support.v7.widget.AppCompatTextView
                    style="@style/BlackText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="1" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_radius_white_10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <android.support.v7.widget.AppCompatTextView
                style="@style/GrayDarkText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/exchange_coin_hint"
                android:textSize="@dimen/font_14" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvExchangeCoin"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/select_button_enable_bg"
                android:paddingHorizontal="12dp"
                android:paddingVertical="10dp"
                android:text="@string/exchange_coin" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_radius_white_10dp"
            android:orientation="vertical"
            android:padding="10dp">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnRequestDelivery"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/select_button_enable_bg"
                android:text="@string/request_delivery" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnCheckLogistics"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_radius_yellow_5dp"
                android:text="@string/check_logistics"
                android:visibility="visible" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/doll_detail_hint" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
