<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:paddingHorizontal="20dp"
    android:paddingVertical="12dp"
    tools:context="com.softgarden.catchdolls.ui.userCenter.myInviteAwards.InviteAwardsActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@mipmap/invite_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.AppCompatTextView
            style="@style/BlackText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_invite_code"
            android:textSize="@dimen/font_18"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/BlackText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hint_share_invite_code" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/BlackText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="我已邀请了0位好友" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/BlackText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="100000" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnShareInviteCode"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/share_my_invite_code" />
    </LinearLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.53" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:background="@drawable/shape_radius_white_10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <android.support.v7.widget.AppCompatTextView
            style="@style/BlackText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/invite_exchange"
            android:textSize="@dimen/font_18"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/BlackText"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/hint_exchange_invite_code" />

        <android.support.v7.widget.AppCompatEditText
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:hint="输入邀请码，获取娃娃币" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnExchangeInviteCode"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/submit" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
