<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:background="@drawable/card_top_radius_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context="com.softgarden.catchdolls.ui.login.LoginActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            app:layout_constraintRight_toRightOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent">


            <android.support.v7.widget.AppCompatImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="25dp"
                android:src="@mipmap/ic_launcher" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/PinkText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/login_please" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edtPhone"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_stroke1dp_pink_white_5dp"
                android:gravity="center_vertical"
                android:hint="@string/phone_num"
                android:inputType="phone"
                android:minHeight="40dp"
                android:paddingLeft="10dp" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edtPwd"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_stroke1dp_pink_white_5dp"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="6"
                android:minHeight="40dp"
                android:paddingLeft="10dp" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnLogin"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:minHeight="40dp"
                android:text="@string/ensure"
                android:textSize="@dimen/font_16" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tvRegister"
                    style="@style/BlackText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/go_register" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tvForgetPwd"
                    style="@style/BlackText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/forget_pwd" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <View
                        style="@style/HorLineStyle"
                        android:layout_gravity="center" />

                    <android.support.v7.widget.AppCompatTextView
                        style="@style/GrayLightText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@color/white"
                        android:padding="10dp"
                        android:text="@string/third_party_login" />
                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tvWeiChat"
                        style="@style/BlackText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="5dp"
                        android:drawableTop="@mipmap/weichat"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/weichat" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tvSina"
                        style="@style/BlackText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="5dp"
                        android:drawableTop="@mipmap/sina"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/sina" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>

