<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteLight"
    android:padding="10dp"
    tools:context="com.softgarden.catchdolls.ui.more.FeedbackActivity">

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/edtFeedback"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/shape_radius_white_5dp"
        android:gravity="top"
        android:hint="@string/feedback_hint"
        android:padding="5dp"
        app:layout_constraintDimensionRatio="720:300"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtFeedback">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_radius_white_5dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <android.support.v7.widget.AppCompatTextView
                style="@style/BlackText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_num" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edtEmail"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:hint="@string/input_email"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:background="@color/white"
                android:padding="5dp" />
        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_radius_pink_5dp"
            android:minHeight="40dp"
            android:text="@string/submit"
            android:textSize="@dimen/font_16" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
